--- a/WebServices/appsettings.json
+++ b/WebServices/appsettings.json
@@ -9,7 +9,7 @@
 
  
   "ConnectionStrings": {
-    "conectionDataBase": "Server=DESKTOP-5RCL6C7\\SQLEXPRESS; initial Catalog=MetaAppDB; Integrated Security=True; TrustServerCertificate=true;"
+    "conectionDataBase": "Server=DESKTOP-5RCL6C7\\SQLEXPRESS; initial Catalog=SmartPos; Integrated Security=True; TrustServerCertificate=true;"
   },
 
   "JwtSettings": {
